# vmm_frc

./: .gitignore  Dockerfile  README.md  acsc.spec  build_installer.bat  create_icon.py  create_logo.py  docker-compose.yml  installer.iss  pyproject.toml  run_gui.py  runtime_hook.py  setup.cfg  update_version.py
acsc/: __init__.py  analysis.py  fiber_trajectory.py  gui.py  io.py  simulation.py
acsc/insegt/: __init__.py  fiber_model.py  run_insegt_gui.py
acsc/insegt/annotators/: __init__.py  dual_panel_annotator.py  insegtannotator.py
acsc/insegt/models/: __init__.py  featsegt.py  gaussmulti.py  kmdict.py  segt.py  skbasic.py
docs/: docusaurus.config.ts  pydoc-markdown.yml  sidebars.ts
docs/docs/api/: analysis.md  fiber_trajectory.md  index.md  io.md  segment.md  simulation.md  visualize.md
docs/docs/documentation/: fiber-trajectory.md  insegt.md  orientation-analysis.md  segmentation.md  volume-fraction.md
examples/: vf_poisson_sampling_test.py  volume_fraction_test.py
src/: analysis.py  dehom.py  io.py  simulation.py
tests/: analysis_test.py  dehom_test.py  io_test.py  simulation_test.py
tests/test_images/: test_0000.tif  test_0001.tif  test_0002.tif  test_0003.tif  test_0004.tif
vmm/: __init__.py  analysis.py  fiber_trajectory.py  gui.py  io.py  log_viewer.py  logger.py  phase_wheel.py  segment.py  simulation.py  theme.py
