[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acsc"
version = "0.0.1"
description = "Axial compressive strength calculator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Naruki-Ichihara", email = "ichihara.naruki@nihon-u.ac.jp"}
]
maintainers = [
    {name = "Naruki-Ichihara", email = "ichihara.naruki@nihon-u.ac.jp"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "numba",
    "pandas",
    "openpyxl",
    "scipy",
    "scikit-image",
    "opencv-python",
    "pydicom",
    "pyvista",
    "pyvistaqt",
    "PySide6",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
build = [
    "pyinstaller>=5.0",
]

[project.urls]
Homepage = "https://github.com/Naruki-Ichihara/axial_compressive_strength_calculator"
Repository = "https://github.com/Naruki-Ichihara/axial_compressive_strength_calculator"
"Bug Tracker" = "https://github.com/Naruki-Ichihara/axial_compressive_strength_calculator/issues"

[project.scripts]
acsc-gui = "acsc.gui:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["acsc*"]
exclude = ["tests*", "build*", "dist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=acsc --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["acsc"]
